1min to ARR, waypoint & destination small fix, remove pictogram, mins to min, advisors to messenge board

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -169,7 +169,7 @@ body {
 
   .waypoint {
     display: flex;
-    font-size: 26px;
+    font-size: 38px;
     height: 55px;
     overflow: hidden;
 
